# rust-clean-arch

./: Cargo.toml  README.md  build.rs
api/rca/user/v1/: user.proto
common/: Cargo.toml
common/src/: lib.rs
common/src/error/: error.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/aggregate/: mod.rs  user.rs
domain/src/repository/: id.rs  mod.rs  user.rs
domain/src/vo/: mod.rs  name.rs  user_id.rs  user_name.rs
infrastructure/src/: main.rs
interface/: Cargo.toml
src/: main.rs
src/domain/: aggregate.rs  entity.rs  mod.rs  repository.rs  vo.rs
src/domain/aggregate/: aggregate.rs  mod.rs  user.rs
src/domain/repository/: id.rs  mod.rs  repository.rs  user.rs
src/domain/vo/: id.rs  name.rs
src/infrastructure/: mod.rs
src/infrastructure/grpc/: app.rs  service.rs
src/infrastructure/id/: mod.rs  ulid.rs
src/infrastructure/state/: memory.rs  mock.rs  mod.rs  user.rs
src/usecase/interactor/: create_user.rs  mod.rs
src/usecase/port/: create_user.rs  mod.rs  port.rs
usecase/: Cargo.toml
usecase/src/: lib.rs
usecase/src/interactor/: create_user.rs
usecase/src/port/: create_user.rs  port.rs
