[package]
name = "rust-clean-arch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
getset = "0.1.1"
derive-new = "0.5"
ghost = "0.1"
ulid = "0.4.1"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.8.0"
tonic = { version = "0.4.2", features = ["tls"] }
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }


[build-dependencies]
tonic-build = { version = "0.4.2", features = ["prost"] }
