[package]
name = "domain"
version = "0.1.0"
authors = ["kzmake <kzmake.i3a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
derive_builder = "0.10.2"
getset = "0.1.1"
ghost = "0.1"
ulid = "0.4.1"
anyhow = "1.0"
